Mon Nov 27 16:58:31 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Convert all output files from custom commands if the project type
          requires slash conversion.

        * templates/vc7csharp.mpd:
        * templates/vc7vb.mpd:
        * templates/vc8csharp.mpd:
        * templates/vc8vb.mpd:

          Made resource files not dependent upon any particular source file.
          Also, re-removed the .aspx support in the vc8 templates.  See the
          modification from Tue Jun 20 12:41:49 UTC 2006.

Wed Nov 22 18:07:56 2006  Steve Huston  <shuston@riverace.com>

        * templates/vc8platforms.mpt: Corrected macros and libs for Smartphone
          WinCE configurations.

Wed Nov 22 20:40:58 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:
        * templates/vc8csharp.mpd:
        * templates/vc8vb.mpd:

          Added support for resource files (.resx or .resources) and .aspx
          files for both csharp and vb for the vc8 project type.

Wed Nov 22 19:54:01 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/VC8WorkspaceCreator.pm:

          The adjustment of the website project name wasn't correct.  It
          needed to be the dirname of the project name instead of the
          basename.

Wed Nov 22 19:34:29 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * docs/README:
        * modules/ProjectCreator.pm:
        * modules/VC7ProjectCreator.pm:
        * modules/VC7WorkspaceCreator.pm:
        * modules/VC8ProjectCreator.pm:
        * modules/VC8WebWorkspaceCreator.pm:
        * modules/VC8WorkspaceCreator.pm:
        * modules/WorkspaceCreator.pm:

          Removed the scope keyword, webapp, from the workspace and added a
          new project keyword named webapp.  If webapp is set to 1 in the
          project, it will be considered a Web Application, will not have a